--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "langchain": "^0.3.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
     "nodemon": "^3.1.4",
