--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "dependencies": {
+    "@langchain/core": "^0.3.11",
+    "@langchain/langgraph": "^0.2.15",
+    "@langchain/openai": "^0.3.7",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "langchain": "^0.3.2",
+    "llamaai": "^1.0.4",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
     "nodemon": "^3.1.4",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.0.0",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^10.0.0"
   },
   "scripts": {
     "start": "node server.mjs",
