--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
-    "@langchain/core": "^0.3.11",
+    "@anthropic-ai/sdk": "^0.29.1",
+    "@langchain/core": "^0.3.12",
     "@langchain/langgraph": "^0.2.15",
+    "@langchain/ollama": "^0.1.0",
     "@langchain/openai": "^0.3.7",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
@@ -13,6 +15,7 @@
     "llamaai": "^1.0.4",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
+    "node-llama-cpp": "^3.1.1",
     "nodemon": "^3.1.4",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.0.0",
